--- a/website/templates/09.25.2021_Covid Website Layout/09.25.2021_Covid Website Layout.html
+++ b/website/templates/09.25.2021_Covid Website Layout/09.25.2021_Covid Website Layout.html
@@ -1,50 +1,104 @@
 <!doctype html>
 <html>
-
+<head>
+<style>
+		*{	
+		}
+		.child{
+    border: 5px solid blue;
+    float: right;
+		}
+		@media (min-width: 768px){
+			
+		.parent{
+		display: flex;	
+		}
+		}
+	.div1 {
+}
+    body {
+    background-color: #CAE0F1;
+}
+</style>
+<meta charset="utf-8">
+</head>
 <body>
-<header style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; font-size: 36px; text-align: center;">COVID - 19 | TOTAL CASES ( )</header>
-<header>Symptoms</header>
-<table width="200" border="1">
-  <tbody>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-  </tbody>
-</table>
-<header>
-  <p style="text-align: right">Protect Yourself<span style="text-align: right"></span><span style="text-align: left"></span></p>
-</header>
-<table width="200" border="1" align="right">
-  <tbody>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-  </tbody>
-</table>
-<!-- Header content --><!-- content -->
+
+<section class="parent">
+  <section class="child" style="font-size: 80px; font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif;">
+  <strong> COVID-19</strong> </section>
+  <section class="child" style="font-size: 80px; font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif;">
+  <strong> TOTAL CASES ( )</strong> </section>
+	
+</section>
+	<br>
+	<br>
+<section class="parent">
+  <section class="child" style="font-size: 30px">
+	<span style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif">SYMPTOMS</span><span style="text-align: right"> </span></section>
+	<span style="text-align: right">
+	<section class="child" style="font-size: 30px; font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif;"  
+	>
+	PROTECT YOURSELF</section>
+  </span>
+  <section class="child" style="font-size: 30px"  
+	> </section>
+</section>
+	<br>
+	
+<section class="parent">
+	<table width="500" border="1" class="div">
+	  <tbody>
+	    <tr>
+	      <td>&nbsp;</td>
+	    
+        </tr>
+	    <tr>
+	      <td>&nbsp;</td>
+	  
+        </tr>
+	    <tr>
+	      <td>&nbsp;</td>
+	   
+        </tr>
+      </tbody>
+  </table>
+		<section class="parent">
+	<table width="500" border="1">
+	  <tbody>
+	    <tr>
+	      <td>&nbsp;</td>
+	    
+	      
+        </tr>
+	    <tr>
+	      <td>&nbsp;</td>
+	     
+	   
+        </tr>
+	    <tr>
+	      <td>&nbsp;</td>
+	     
+	    
+        </tr>
+      </tbody>
+	  </table>
+			
+		</section>
+	
+</section>
+	<br>
+	<br>
+	<br>
+	<section class="parent">
+	<section class="child" style="font-size: 14px; font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif;">
+	Website brought to you by: Oraz, Rose, Anubhav, and Austen
+	  </section>
+</section>
+	<section>
+		<br>
+		<br>
+	</section>
+<img src="AboutPageAssets/images/Web_Banner4x.png" width="800" height="400" alt=""/>    </section>
 </body>
 </html>
