Update 09.25.2021_Covid Website Layout.html

--- a/website/templates/09.25.2021_Covid Website Layout/09.25.2021_Covid Website Layout.html
+++ b/website/templates/09.25.2021_Covid Website Layout/09.25.2021_Covid Website Layout.html
@@ -17,6 +17,7 @@
 }
     body {
     background-color: #CAE0F1;
+    text-align: center;
 }
 </style>
 <meta charset="utf-8">
@@ -25,16 +26,16 @@
 
 <section class="parent">
   <section class="child" style="font-size: 80px; font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif;">
-  <strong> COVID-19</strong> </section>
+  <strong> COVID-19&nbsp;&nbsp;</strong> </section>
   <section class="child" style="font-size: 80px; font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif;">
-  <strong> TOTAL CASES ( )</strong> </section>
+  <strong> &nbsp; &nbsp;|&nbsp; &nbsp; &nbsp; TOTAL CASES ( )</strong> </section>
 	
 </section>
 	<br>
 	<br>
 <section class="parent">
   <section class="child" style="font-size: 30px">
-	<span style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif">SYMPTOMS</span><span style="text-align: right"> </span></section>
+	<span style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;SYMPTOMS&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span style="text-align: right"> </span></section>
 	<span style="text-align: right">
 	<section class="child" style="font-size: 30px; font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif;"  
 	>
@@ -63,26 +64,21 @@
       </tbody>
   </table>
 		<section class="parent">
-	<table width="500" border="1">
-	  <tbody>
-	    <tr>
-	      <td>&nbsp;</td>
-	    
-	      
-        </tr>
-	    <tr>
-	      <td>&nbsp;</td>
-	     
-	   
-        </tr>
-	    <tr>
-	      <td>&nbsp;</td>
-	     
-	    
-        </tr>
-      </tbody>
-	  </table>
-			
+	
+			<table width="500" border="1">
+  <tbody>
+    <tr>
+      <th scope="col">&nbsp;</th>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+    </tr>
+  </tbody>
+</table>
+
 		</section>
 	
 </section>
@@ -91,8 +87,7 @@
 	<br>
 	<section class="parent">
 	<section class="child" style="font-size: 14px; font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif;">
-	Website brought to you by: Oraz, Rose, Anubhav, and Austen
-	  </section>
+	&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Website brought to you by: Oraz, Rose, Anubhav, and Austen</section>
 </section>
 	<section>
 		<br>
